tables: create the required tables and mapping